# sparkle-squad

./: .gitignore  Cargo.toml  Dioxus.toml  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
assets/: main.css  preopt_assets.sh  tailwind.css
public/: CNAME  convert_to_webp.sh  robots.txt  sitemap.xml  tagManager.js
src/: about_us.rs  config.ts  content.config.ts  header.rs  i18n.ts  main.rs  news.rs
src/components/: BaseHead.astro  Header.astro  HorizontalCard.astro  HorizontalCardWithoutLink.astro  Icon.astro  Icons.ts  LanguageSelect.astro  Select.astro  SideBar.astro  SideBarFooter.astro  SideBarMenu.astro  StarlightLanguageSelect.astro  mod.rs
src/components/pages/: FourOFourPage.astro  IndexPage.astro  KontaktPage.astro
src/components/utils/: localizedUrl.ts  path.ts
src/content/: config.ts
src/content/blog/de/: post1.md  post2.md  post3.md
src/content/blog/en/: post1.md  post2.md  post3.md
src/content/blog/ru/: post1.md  post2.md  post3.md
src/content/de/neuigkeiten/: post1.md
src/content/neuigkeiten/: post1.md
src/content/news/de/: post1.md  post10.md  post11.md  post12.md  post13.md  post14.md  post15.md  post16.md  post17.md  post18.md  post2.md  post3.md  post4.md  post5.md  post5.mdx  post6.mdx  post7.md  post8.md  post9.md
src/content/news/en/: post1.md  (+18 more)
src/layouts/: BaseLayout.astro  PostLayout.astro
src/pages/: 404.astro  contact.astro  index.astro  kontakt.astro
src/pages/[lang]/: 404.astro  contact.astro  index.astro
src/pages/neuigkeiten/: [...page].astro  [slug].astro
(+37 files in other folders)
