[package]
name = "sparkle-squad"
version = "0.1.0"
authors = ["Tom <tom@dymel.dev>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
web-sys = { version = "0.3", features = ["Window", "Location"] }
comfy-i18n = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
